<resources>
    <string name="app_name">Pet Tinder</string>

    <string name="rangeTextView">Search Radius</string>
    <string name="selectProvincePrompt">Select Province</string>
    <string name="search">Search</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="km">km</string>
    <string name="animal_type">Animal Type</string>
    <string name="age">Age</string>

    <string name="error_weak_password">Password must be at least 6 characters.</string>
    <string name="error_invalid_email">Please enter valid email.</string>
    <string name="error_email_already_used">An account exists with this email.</string>
    <string name="login">LOGIN</string>
    <string name="empty_recycler">You have not liked any pets yet. Get swiping!!</string>
    <string name="EmailTest">Email</string>

    <string-array name="province_list_full">
        <item>British Columbia</item>
        <item>Alberta</item>
        <item>Saskatchewan</item>
        <item>Manitoba</item>
        <item>Ontario</item>
        <item>Quebec</item>
        <item>Newfoundland and Labrador</item>
        <item>Nova Scotia</item>
        <item>New Brunswick</item>
        <item>P.E.I.</item>
        <item>Yukon</item>
        <item>Northwest Territories</item>
        <item>Nunavat</item>
    </string-array>

    <string-array name="distances">
        <item>10km</item>
        <item>50km</item>
        <item>100km</item>
        <item>250km</item>
        <item>500km</item>
    </string-array>

    <string-array name="animal_type">
        <item>Any</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Horse</item>
        <item>Birds</item>
        <item>Barnyard</item>
    </string-array>

    <string-array name="animal_ages">
        <item>Any</item>
        <item>Baby</item>
        <item>Young</item>
        <item>Adult</item>
        <item>Senior</item>
    </string-array>
</resources>